deploy/calculator-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-front-service
  namespace: staging
spec:
  selector:
    app: calculator-front
  ports:
    - port: 80
      targetPort: 80
